[package]
name = "btc_key_checker"
version = "0.1.0"
edition = "2018"

[dependencies]
bitcoin = "0.26.0"
rand = "0.8.4"
num_cpus = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bloom = "0.3.2"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }




